@@ -71,13 +71,13 @@ int	get_value_agent(DC_ITEM *item, AGENT_RESULT *result)
 
 		zabbix_log(LOG_LEVEL_DEBUG, "get value from agent result: '%s'", buf);
 
-		if (0 == strcmp(buf, "ZBX_NOTSUPPORTED"))
+		if (0 == strcmp(buf, ZBX_NOTSUPPORTED))
 		{
 			zbx_snprintf(buffer, sizeof(buffer), "Not supported by Zabbix Agent");
 			SET_MSG_RESULT(result, strdup(buffer));
 			ret = NOTSUPPORTED;
 		}
-		else if (0 == strcmp(buf, "ZBX_ERROR"))
+		else if (0 == strcmp(buf, ZBX_ERROR))
 		{
 			zbx_snprintf(buffer, sizeof(buffer), "Zabbix Agent non-critical error");
 			SET_MSG_RESULT(result, strdup(buffer));
